# rag-book

./: .gitignore  env.example  ingest_book.py  main.py  main_fastapi.py  main_modal.py  pyproject.toml  readme.md  requirements.txt
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
agents/: book_agent.py  book_faiss_agent.py  book_podcast_agent.py  book_qdrant_agent.py
benchmarking/: llm_model_benchmark.py  qdrant_embedding_benchmark.py
dataset/: dataset_builder.py
evaluator/: relevance_grade_document_evaluator.py  toxicity_evaluator.py
planning/codebase/: CONVENTIONS.md  TESTING.md
prompts/: general_rag.py  podcast.py
rag/faiss/: retrieve_faiss.py
rag/qdrant/: config.py  document_processor.py  qdrant_db.py
requirements/: requirements_audio.txt  requirements_main.txt
schemas/: chat.py  podcast.py  question.py  toc.py
services/audio/tts/: tts_engine.py
services/rag/faiss/: build_faiss.py
services/rag/qdrant/: document_processor.py  qdrant_db.py
test/: conftest.py  test_agent_conversation_persistance.py  test_benchmark_dataset_builder.py  test_chace_manager.py  test_faiss.py  test_ingest_book.py  test_llm_utils.py  test_mlflow_scorer.py  test_podcast_agent.py  test_podcast_tts.py  test_psql.py  test_qdrant.py  test_tts.json  test_tts_engine.py
utils/: chace_manager.py  llm_config.py  toc_extractor.py
